# R-Type

./: CMakeCache.txt  CMakeLists.txt  Makefile  R-Type  cmake_install.cmake  git.ignore
Client/Includes/: Colors.hpp
Client/Src/: WindowManager.cpp  WindowManager.h  main.cpp
Client/Src/Components/: Collidable.h  Health.h  Player.h  Position.h  Renderable.h  SpriteAndTexture.h
Client/Src/Core/: ComponentArray.h  ComponentManager.h  Coordinator.h  EntityManager.h  Event.h  EventManager.h  System.h  SystemManager.h  Types.h
Client/Src/Systems/: PlayerControlSystem.cpp  PlayerControlSystem.h  RenderSystem.cpp  RenderSystem.h
Includes/: Entity.h
Server/: Server.cpp  Utils.cpp  Utils.h  main.cpp  tcp_connection.cpp  tcp_connection.h  tcp_server.cpp  tcp_server.h  udp_server.cpp  udp_server.h
Src/: main.cpp
